# hapir

./: .gitignore  Cargo.toml  README.md  README_CN.md  tsconfig.base.json
crates/hapi-cli/: Cargo.toml
crates/hapi-cli/src/: api.rs  config.rs  lib.rs  persistence.rs
crates/hapi-cli/src/agent/: local_launch_policy.rs  message_converter.rs  registry.rs  session_base.rs  session_factory.rs
crates/hapi-cli/src/commands/: auth.rs  claude.rs  codex.rs  common.rs  gemini.rs  mcp.rs  mod.rs  opencode.rs  runner.rs
crates/hapi-cli/src/handlers/: bash.rs  directories.rs  files.rs  git.rs  mod.rs
crates/hapi-cli/src/rpc/: mod.rs
crates/hapi-cli/src/runner/: control_client.rs  types.rs
crates/hapi-cli/src/terminal/: mod.rs
crates/hapi-hub/: Cargo.toml  build.rs
crates/hapi-hub/src/: lib.rs
crates/hapi-shared/: Cargo.toml
crates/hapi-shared/src/: lib.rs  modes.rs  schemas.rs  session_summary.rs  utils.rs  voice_prompt.txt  ws_protocol.rs
crates/hapir-acp/: Cargo.toml
crates/hapir-acp/src/: transport.rs  utils.rs
crates/hapir-acp/src/acp_sdk/: backend.rs  message_handler.rs
crates/hapir-acp/src/codex_app_server/: backend.rs  message_handler.rs  mod.rs
crates/hapir-cli/: Cargo.toml
crates/hapir-cli/src/: api.rs  config.rs  lib.rs  persistence.rs  terminal_utils.rs
crates/hapir-cli/src/agent/: common_rpc.rs  local_launch_policy.rs  local_sync.rs  loop_base.rs  message_converter.rs  mod.rs  runner_lifecycle.rs  session_base.rs  session_factory.rs  types.rs  utils.rs
crates/hapir-cli/src/agent/backends/acp/: backend.rs  message_handler.rs  mod.rs  transport.rs
crates/hapir-cli/src/commands/: auth.rs  claude.rs  codex.rs  common.rs  doctor.rs  gemini.rs  hook_forwarder.rs  mcp.rs  opencode.rs  runner.rs
crates/hapir-cli/src/handlers/: bash.rs  directories.rs  files.rs  mod.rs  path_security.rs  ripgrep.rs  skills.rs  slash_commands.rs  uploads.rs
crates/hapir-cli/src/modules/: mod.rs
crates/hapir-cli/src/modules/claude/: hook_server.rs  local_launcher.rs  mcp_config.rs  mod.rs  permission_handler.rs  remote_launcher.rs  run.rs  session.rs  session_scanner.rs  version_check.rs
crates/hapir-cli/src/modules/claude/sdk/: query.rs  types.rs
crates/hapir-cli/src/modules/codex/: local_launcher.rs  mod.rs  remote_launcher.rs  run.rs  session_scanner.rs
crates/hapir-cli/src/modules/gemini/: mod.rs  run.rs
crates/hapir-cli/src/modules/opencode/: mod.rs  run.rs
crates/hapir-cli/src/rpc/: mod.rs  types.rs
crates/hapir-cli/src/runner/: control_client.rs  control_server.rs  mod.rs  worktree.rs
crates/hapir-cli/src/terminal/: mod.rs
crates/hapir-cli/src/utils/: deterministic_json.rs  error_utils.rs  invalidate_sync.rs  message_queue.rs  process.rs  pushable_stream.rs  shell.rs  time.rs
crates/hapir-cli/src/ws/: client.rs  machine_client.rs  mod.rs  session_client.rs
crates/hapir-hub/: Cargo.toml  build.rs
crates/hapir-hub/src/: lib.rs
crates/hapir-hub/src/config/: cli_api_token.rs  jwt_secret.rs  mod.rs  owner_id.rs  vapid_keys.rs
crates/hapir-hub/src/notifications/: event_parsing.rs  mod.rs  notification_hub.rs  push_channel.rs  push_service.rs  session_info.rs  setup.rs
crates/hapir-hub/src/store/: machines.rs  messages.rs  mod.rs  push_subscriptions.rs  sessions.rs  types.rs  users.rs  versioned_updates.rs
crates/hapir-hub/src/sync/: alive_time.rs  event_publisher.rs  machine_cache.rs  message_service.rs  mod.rs  rpc_gateway.rs  session_cache.rs  sse_manager.rs  todos.rs  visibility_tracker.rs
crates/hapir-hub/src/telegram/: api.rs  bot.rs  callbacks.rs  renderer.rs  session_view.rs
crates/hapir-hub/src/web/: mod.rs  static_files.rs  telegram_init_data.rs
crates/hapir-hub/src/web/middleware/: auth.rs  cli_auth.rs
crates/hapir-hub/src/web/routes/: auth.rs  bind.rs  cli.rs  events.rs  git.rs  machines.rs  messages.rs  mod.rs  permissions.rs  push.rs  sessions.rs  voice.rs
crates/hapir-hub/src/ws/: connection_manager.rs  mod.rs  rpc_registry.rs  terminal_registry.rs
crates/hapir-hub/src/ws/handlers/: cli.rs  terminal.rs
crates/hapir-infra/: Cargo.toml
crates/hapir-infra/src/: api.rs  auth.rs  config.rs  lib.rs  machine.rs  persistence.rs  process.rs
crates/hapir-infra/src/handlers/: bash.rs  directories.rs  files.rs  git.rs  mod.rs  plugins.rs  ripgrep.rs  skills.rs  slash_commands.rs  uploads.rs
crates/hapir-infra/src/rpc/: mod.rs
crates/hapir-infra/src/utils/: deterministic_json.rs  error_utils.rs  invalidate_sync.rs  machine.rs  message_queue.rs  mod.rs  process.rs  terminal.rs  time.rs
crates/hapir-infra/src/ws/: client.rs  machine_client.rs  mod.rs  outbox.rs  session_client.rs
crates/hapir-runner/: Cargo.toml
crates/hapir-runner/src/: cli.rs  control_client.rs  control_server.rs  lib.rs  orchestrator.rs  types.rs  worktree.rs
crates/hapir-shared/: Cargo.toml
crates/hapir-shared/bindings/: AgentFlavor.ts  AgentState.ts  AgentStateCompletedRequest.ts  AgentStateRequest.ts  AnswersFormat.ts  AttachmentMetadata.ts  CompletedRequestStatus.ts  ConnectionChangedData.ts  DecryptedMessage.ts  MessageDeltaData.ts  Metadata.ts  MetadataSummary.ts  ModelMode.ts  NestedAnswers.ts  PermissionDecision.ts  PermissionMode.ts  PermissionModeTone.ts  Session.ts  SessionSummary.ts  SessionSummaryMetadata.ts  StartedBy.ts  SummaryText.ts  SyncEvent.ts  ToastData.ts  TodoItem.ts  TodoPriority.ts  TodoProgress.ts  WorktreeMetadata.ts
crates/hapir-shared/src/: i18n.rs  messages.rs  modes.rs  schemas.rs  socket.rs  utils.rs  version.rs  voice.rs  ws_protocol.rs
docs/: RUST_COMMENT.md
src/: main.rs
web/: README.md  index.html  package.json  vite.config.ts
web/src/api/: voice.ts
web/src/chat/: normalize.ts  normalizeAgent.ts  normalizeUser.ts  reducerTools.ts  tracer.ts
web/src/components/: LoginPrompt.test.tsx  SessionChat.tsx
web/src/hooks/: useAuthSource.ts  useFontScale.ts  useSSE.ts  useServerUrl.ts
web/src/lib/: assistant-runtime.ts  i18n-context.tsx  message-window-store.ts  recent-skills.ts  toolInputUtils.ts  voice-context.tsx
web/src/types/: api.ts  generated.ts
web/src/utils/: applySuggestion.ts
(+99 files in other folders)
