[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hapi-shared = { path = "crates/hapi-shared" }
hapi-hub = { path = "crates/hapi-hub" }
hapi-cli = { path = "crates/hapi-cli" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sys-locale = "0.3"

[package]
name = "hapir"
version.workspace = true
edition.workspace = true

[dependencies]
hapi-hub = { workspace = true }
hapi-cli = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hapi-shared = { workspace = true }
