[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hapir-shared = { path = "crates/hapir-shared" }
hapir-hub = { path = "crates/hapir-hub" }
hapir-infra = { path = "crates/hapir-infra" }
hapir-cli = { path = "crates/hapir-cli" }
hapir-runner = { path = "crates/hapir-runner" }
hapir-acp = { path = "crates/hapir-acp" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sys-locale = "0.3"
ts-rs = { version = "12", features = ["serde-json-impl"] }
arc-swap = { version = "1.8.2", features = ["serde"] }
chrono = "0.4"

[package]
name = "hapir"
version.workspace = true
edition.workspace = true

[dependencies]
hapir-hub = { workspace = true }
hapir-cli = { workspace = true }
hapir-runner = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hapir-shared = { workspace = true }
hapir-infra = { workspace = true }
