[package]
name = "hapir-acp"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
uuid = { version = "1", features = ["v4"] }
