[package]
name = "hapir-cli"
version.workspace = true
edition.workspace = true

[dependencies]
hapir-shared = { workspace = true }
hapir-infra = { workspace = true }
hapir-runner = { workspace = true }
hapir-acp = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }
atty = "0.2"
sha2 = "0.10"
chrono = { workspace = true }
hex = "0.4"
portable-pty = "0.9"
axum = "0.8"
rand = "0.10"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
