[package]
name = "hapir-infra"
version.workspace = true
edition.workspace = true

[dependencies]
hapir-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures = "0.3"
urlencoding = "2"
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
rand = "0.8"
pin-project-lite = "0.2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
